# LeLM

./: .gitignore  README.md  pyproject.toml
configs/: train_config.yaml
data/: prompts.txt
notebooks/: LeLM_colab.ipynb  convert_to_gguf.ipynb
scripts/: 01_scrape_reddit.py  01b_scrape_kd.py  01c_generate_kd_synthetic.py  02_process_data.py  03_train.py  04_inference.py
